# Agile

./: BlurD.docx  HOD verfied document (2).docx  ReadMe.md  hod_document_content.txt  rag_cache.pkl
ocr_project/: ADVANCED_PREPROCESSING_COMPLETE.md  COMPLETE_PROJECT_FLOW.md  DATAFRAME_ERROR_FIXED.md  DEEP_LEARNING_OCR_COMPLETE.md  DOCUMENT_PROCESSING_IMPLEMENTATION_COMPLETE.md  EMOJI_REMOVAL_AND_BLUR_COMPLETE.md  FIELD_DETECTION_IMPLEMENTATION_COMPLETE.md  FIELD_SELECTION_ENHANCEMENT_COMPLETE.md  HIGH_CONFIDENCE_DOCUMENT_DETECTION_COMPLETE.md  IMAGE_BASED_ML_ENHANCEMENT_COMPLETE.md  MANUAL_FIX_INSTRUCTIONS.txt  METADATA_EXTRACTION_COMPLETE.md  METADATA_QUICK_REFERENCE.md  MONGODB_INTEGRATION_COMPLETE.md  NAVIGATION_IMPLEMENTATION_COMPLETE.md  OCR_SYSTEM_ANALYSIS.md  OCR_SYSTEM_FIXED.md  OPENCV_PILLOW_IMPLEMENTATION_COMPLETE.md  PROFESSIONAL_HEADER_FOOTER_COMPLETE.md  PROJECT_DOCUMENTATION.md  README.md  analysis_output.txt  analyze_certificate.py  analyze_rag_data.py  app.py  app.py.backup_20251125_093029  app.py.bak  auth_db.py  auth_db_mongo.py  auth_routes.py  complete_ocr_flow.py  create_test_image.py  db_utils.py  debug_detection.py  demo_complete_ml_system.py  demo_export.json  demo_image_based_trainer.py  demo_image_training.py  demo_metadata_impact.py  demo_ml_training.py  (+60 more)
ocr_project/models/: demo_image_based_classifier.pkl  document_classifier.pkl  field_detection_model_20251116_123126.pkl  field_detection_model_20251116_153854.pkl  field_detection_model_20251116_154141.pkl  field_detection_model_20251116_154155.pkl  field_detection_model_20251116_154327.pkl  (+27 more)
(+29 files in other folders)
