[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-text-extraction"
version = "1.0.0"
description = "OCR Image to Text Extraction with preprocessing capabilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "OCR Project", email = "ocr@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pytesseract==0.3.10",
    "opencv-python==4.8.1.78",
    "Pillow==10.0.0",
    "numpy==1.26.1",
    "flask==3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
]

[project.scripts]
ocr-extract = "ocr.ocr:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ocr*"]